--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -17,9 +17,11 @@ provider:
   region: ${opt:region, 'us-east-1'}
 
   environment:
-    TODO_TABLE: Todo2-${self:provider.stage}
-    #IMAGES_TABLE: Images-todo-${self:provider.stage}
-    #IMAGE_ID_INDEX: ImageIdIndex
+    TODO_TABLE: Todos-serverless-${self:provider.stage}
+    IMAGES_TABLE: Images-todo-${self:provider.stage}
+    IMAGE_ID_INDEX: ImageIdIndex
+    IMAGES_S3_BUCKET: serverless-todo-bucket-${self:provider.stage}
+    SIGNED_URL_EXPIRATION: 300
 
   iamRoleStatements:
     - Effect: Allow
@@ -29,26 +31,28 @@ provider:
         - dynamodb:GetItem
         - dynamodb:DeleteItem
         - dynamodb:UpdateItem
+        - dynamodb:Query
       #  - dynamodb.UpdateItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
-    #- Effect: Allow
-    #  Action:
-    #    - dynamodb:PutItem
-    #    - dynamodb:Query
-    #  Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:Query
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}
     #- Effect: Allow
     #  Action:
     #    - dynamodb:Query
     #  Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.IMAGES_TABLE}/index/${self:provider.environment.IMAGE_ID_INDEX}
-
+    - Effect: Allow
+      Action:
+        - s3:PutObject
+        - s3:GetObject
+      Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
 
 functions:
 
-  #Auth:
-  #  handler: src/lambda/auth/auth0Authorizer.handler
-
-  # TODO: Configure this function
-  
+  Auth:
+    handler: src/lambda/auth/auth0Authorizer.handler
 
   # TODO: Configure this function
   GetTodos:
@@ -85,13 +89,13 @@ functions:
           cors: true
 
   # TODO: Configure this function
-  #GenerateUploadUrl:
-  #  handler: src/lambda/http/generateUploadUrl.handler
-  #  events:
-  #    - http:
-  #        method: post
-  #        path: todos/{todoId}/attachment
-  #        cors: true
+  GenerateUploadUrl:
+    handler: src/lambda/http/generateUploadUrl.handler
+    events:
+      - http:
+          method: post
+          path: todos/{todoId}/attachment
+          cors: true
 
 resources:
   Resources:
@@ -99,13 +103,67 @@ resources:
       Type: AWS::DynamoDB::Table
       Properties:
         AttributeDefinitions:
-          - AttributeName: id
+          - AttributeName: userId
+            AttributeType: S
+          - AttributeName: todoId
             AttributeType: S
           
 
         KeySchema:
-          - AttributeName: id
-            KeyType: HASH 
+          - AttributeName: userId
+            KeyType: HASH
+          - AttributeName: todoId
+            KeyType: RANGE 
           
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.TODO_TABLE}
+    ImagesDynamoDBTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: userId
+            AttributeType: S
+          - AttributeName: todoId
+            AttributeType: S
+          
+
+        KeySchema:
+          - AttributeName: userId
+            KeyType: HASH 
+          - AttributeName: todoId
+            KeyType: RANGE
+          
+        BillingMode: PAY_PER_REQUEST
+        TableName: ${self:provider.environment.IMAGES_TABLE}
+    
+    AttachmentsBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+        CorsConfiguration:
+          CorsRules:
+            -
+              AllowedOrigins:
+                - '*'
+              AllowedHeaders:
+                - '*'
+              AllowedMethods:
+                - GET
+                - PUT
+                - POST
+                - DELETE
+                - HEAD
+              MaxAge: 3000
+    BucketPolicy:
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        PolicyDocument:
+          Id: MyPolicy3
+          Version: "2012-10-17"
+          Statement:
+            - Sid: PublicReadForGetBucketObjects
+              Effect: Allow
+              Principal: '*'
+              Action: 's3:GetObject'
+              Resource: 'arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*'
+        Bucket: !Ref AttachmentsBucket
