--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -5,6 +5,8 @@ service:
 
 plugins:
   - serverless-webpack
+  - serverless-reqvalidator-plugin
+  - serverless-aws-documentation
 #  - serverless-offline
 #  - serverless-dynamodb-local
 #  - serverless-iam-roles-per-function
@@ -49,8 +51,20 @@ provider:
         - s3:GetObject
       Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
 
-functions:
+custom:
+  documentation:
+    api:
+      info:
+        version: v1.0.0
+        title: Serverless Todo Application
+        description: Serverless application for maintaining daily todo list
+    models:
+      - name: createTodoRequest
+        contentType: application/json
+        schema: ${file(src/models/create-todo-request.json)}
 
+
+functions:
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
 
@@ -69,6 +83,12 @@ functions:
           method: post
           path: todos
           cors: true
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Create a new todo item
+            description: Create a new to do item with due date
+            requestModels:
+              'application/json': createTodoRequest
 
   # TODO: Configure this function
   UpdateTodo:
@@ -167,3 +187,12 @@ resources:
               Action: 's3:GetObject'
               Resource: 'arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*'
         Bucket: !Ref AttachmentsBucket
+    
+    RequestBodyValidator:
+      Type: AWS::ApiGateway::RequestValidator
+      Properties:
+        Name: 'request-body-validator'
+        RestApiId:
+          Ref: ApiGatewayRestApi
+        ValidateRequestBody: true
+        ValidateRequestParameters: false
